--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+
+<script src="https://d3js.org/d3.v5.min.js"></script>
+<script src="https://d3js.org/d3-dsv.v1.min.js"></script>
+<script src="https://unpkg.com/d3-simple-slider"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/underscore@1.13.1/underscore-umd-min.js"></script>
+
 <html lang="">
   <head>
     <meta charset="utf-8">
